# ForAdjoint

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example_data/: TA.A38.BXZ.sac.obs  TA.A38.BXZ.sac.syn  dat.LI.STA0004.BXR.rf.sac.F2.5  dat.MX.ST014.BXR.sac.T002_T040  dat.MX.ST014.BXZ.sac.T002_T040  syn.LI.STA0004.BXR.rf.sac.F2.5  syn.LI.STA0004.BXR.sac  syn.LI.STA0004.BXZ.sac  syn.MX.ST014.BXR.sac.T002_T040  syn.MX.ST014.BXZ.sac.T002_T040
example_data/REF/: LI.STA0004.BXR.adj.sac.F2.5  LI.STA0004.BXZ.adj.sac.F2.5
examples/: CMakeLists.txt  ex_cc_misfit.f90  ex_exp_ph_misfit.f90  ex_rf_misfit.f90  ex_wcc_misfit.f90
src/: adjoint_source.f90  cc.f90  config.f90  singal.f90
src/adjoint_source_types/: cc_tt_misfit.f90  exponentiated_phase_misfit.f90  mt_tt_misfit.f90  rf_misfit.f90  waveform_conv_misfit.f90  waveform_misfit.f90
src/utils/: adj_config.f90  cc.f90  config.f90  dpss.f90  fftpack.f90  multitaper.f90  signal.f90  singal.f90
src/window_selector/: eikon_solver_2d.f90  velmodel.f90  win_sel.f90
tests/: test_cc.ipynb  test_exp_ph.ipynb  test_mt.ipynb  test_rf.ipynb  test_wcc.ipynb
